force-app/main/default/objects/Opportunity/fields/PlazaViernes__c.field-meta.xml
<CustomField>
    <fullName>PlazaViernes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si ocupa plaza el Viernes en el centro de día ha de rellenarse este campo</description>
    <label>Viernes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plaza__c.DiaSemana__c</field>
            <operation>equals</operation>
            <value>Viernes</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroDia</value>
        </filterItems>
        <filterItems>
            <field>Plaza__c.PlazaInhabilitada__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Plaza__c</referenceTo>
    <relationshipLabel>Oportunidades (Viernes)</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>