force-app/main/default/objects/Opportunity/fields/Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Datos del prescriptor de la oportunidad</description>
    <label>Prescriptor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Prescriptor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Prescriptor)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>