force-app/main/default/objects/Opportunity/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación con la promoción que aplica en la oportunidad</description>
    <label>Promoción</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Promociones__c.Activa__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Promociones__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>