force-app/main/default/objects/Opportunity/fields/RealSAP__c.field-meta.xml
<CustomField>
    <fullName>RealSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la oportunidad una vez se ha enviado a SAP está planificada o no.</description>
    <label>Real SAP</label>
    <type>Checkbox</type>
</CustomField>