force-app/main/default/objects/Opportunity/fields/Recaptacion__c.field-meta.xml
<CustomField>
    <fullName>Recaptacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Llamadas salientes a oportunidades no cerradas o oportunidades que se han cerrado por problemas por ejemplo Crisis Covid</description>
    <label>Recaptación</label>
    <type>Checkbox</type>
</CustomField>