force-app/main/default/objects/Opportunity/fields/ResidenciaDerivacion__c.field-meta.xml
<CustomField>
    <fullName>ResidenciaDerivacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se usa para indicar la residencia de derivación.</description>
    <label>Residencia Derivación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroResidencia</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Residencia Derivación)</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>