force-app/main/default/objects/Opportunity/fields/ResidenciaIngreso__c.field-meta.xml
<CustomField>
    <fullName>ResidenciaIngreso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro al que ingresa el residente en esta oportunidad</description>
    <label>Residencia de ingreso</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroResidencia</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Residencia de Ingreso)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>