force-app/main/default/objects/Opportunity/fields/ResidenciaPreferencia__c.field-meta.xml
<CustomField>
    <fullName>ResidenciaPreferencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Residencia de preferencia elegida por el candidato</description>
    <label>Residencia de preferencia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CentroResidencia</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Residencia de preferencia)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>