force-app/main/default/objects/Opportunity/fields/SolucionesFinancieras__c.field-meta.xml
<CustomField>
    <fullName>SolucionesFinancieras__c</fullName>
    <description>Uso de una empresa de financiación para el ingreso</description>
    <label>Soluciones financieras</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pensium</fullName>
            </value>
            <value>
                <fullName>Alquiler seguro</fullName>
            </value>
            <value>
                <fullName>Invermax</fullName>
            </value>
            <value>
                <fullName>Grupo Retiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>