force-app/main/default/objects/Opportunity/fields/TipoCentroDia__c.field-meta.xml
<CustomField>
    <fullName>TipoCentroDia__c</fullName>
    <description>Nos indica el tipo de centro de día que se va a vender al residente</description>
    <label>Tipo de Centro de Día</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro de día con transporte</fullName>
            </value>
            <value>
                <fullName>Centro de día sin transporte</fullName>
            </value>
            <value>
                <fullName>Centro de día a media jornada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>