force-app/main/default/objects/Opportunity/fields/TipoPerdida__c.field-meta.xml
<CustomField>
    <fullName>TipoPerdida__c</fullName>
    <description>Campo que nos índica el tipo de pérdida del paciente. Usado en la integración al dar de Alta a un paciente.</description>
    <inlineHelpText>marcar siempre Otros</inlineHelpText>
    <label>Tipo de Pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>