force-app/main/default/objects/Opportunity/fields/TipoPlaza__c.field-meta.xml
<CustomField>
    <fullName>TipoPlaza__c</fullName>
    <description>Tipo de plaza que se está negociando</description>
    <label>Tipo de plaza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoPlaza</valueSetName>
    </valueSet>
</CustomField>