force-app/main/default/objects/Opportunity/fields/TipoPlazaSabado__c.field-meta.xml
<CustomField>
    <fullName>TipoPlazaSabado__c</fullName>
    <formula>CASE(TEXT(PlazaSabado__r.TipoPlaza__c), &apos;P&apos;, &apos;Privada&apos; , &apos;C&apos;, &apos;Pública&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Plaza Sábado</label>
    <type>Text</type>
</CustomField>