force-app/main/default/objects/Opportunity/fields/Transferida__c.field-meta.xml
<CustomField>
    <fullName>Transferida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de tipo check para saber si la oportunidad ha sido transferida</description>
    <label>Transferida</label>
    <type>Checkbox</type>
</CustomField>