force-app/main/default/objects/Opportunity/fields/Transporte__c.field-meta.xml
<CustomField>
    <fullName>Transporte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si necesita transporte. Solo para casos de centro de día</description>
    <label>Transporte</label>
    <type>Checkbox</type>
</CustomField>