force-app/main/default/objects/Opportunity/fields/Traslado__c.field-meta.xml
<CustomField>
    <fullName>Traslado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para la analítica y cruzar las oportunidades Saber cual es la residencia origen y cual la de traslado</description>
    <inlineHelpText>Marca este campo si vas a crear una nueva oportunidad de traslado</inlineHelpText>
    <label>Traslado</label>
    <type>Checkbox</type>
</CustomField>