force-app/main/default/objects/Opportunity/recordTypes/PlazaPrivada.recordType-meta.xml
<RecordType>
    <fullName>PlazaPrivada</fullName>
    <active>true</active>
    <businessProcess>Plaza privada</businessProcess>
    <description>Tipo de registro para el proceso de ventas de las plazas privadas</description>
    <label>Plaza privada</label>
</RecordType>