force-app/main/default/objects/Opportunity/recordTypes/PlazaPublica.recordType-meta.xml
<RecordType>
    <fullName>PlazaPublica</fullName>
    <active>true</active>
    <businessProcess>Plaza pública</businessProcess>
    <description>Tipo de registro para el proceso de ventas de las plazas públicas</description>
    <label>Plaza pública</label>
</RecordType>