force-app/main/default/objects/Opportunity/recordTypes/Retencion.recordType-meta.xml
<RecordType>
    <fullName>Retencion</fullName>
    <active>true</active>
    <businessProcess>Retención</businessProcess>
    <description>Tipo de registro para el proceso de ventas de retenciones</description>
    <label>Retención</label>
</RecordType>