force-app/main/default/objects/Opportunity/recordTypes/Traslado.recordType-meta.xml
<RecordType>
    <fullName>Traslado</fullName>
    <active>true</active>
    <businessProcess>Traslado</businessProcess>
    <description>Tipo de registro para el proceso de ventas de los traslados</description>
    <label>Traslado</label>
</RecordType>