force-app/main/default/objects/Opportunity/validationRules/AltaSoloAutomatismos.validationRule-meta.xml
<ValidationRule>
    <fullName>AltaSoloAutomatismos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( TipoPerdida__c , &quot;Alta&quot;), ISCHANGED(TipoPerdida__c),  $User.Alias != &apos;uinte&apos;)</errorConditionFormula>
    <errorDisplayField>TipoPerdida__c</errorDisplayField>
    <errorMessage>Solo puedes seleccionar Otros</errorMessage>
</ValidationRule>