force-app/main/default/objects/Opportunity/validationRules/CerradaExitoEnvioSAP.validationRule-meta.xml
<ValidationRule>
    <fullName>CerradaExitoEnvioSAP</fullName>
    <active>true</active>
    <description>Es obligatorio que se realice un envío correcto a SAP para que se pueda cerrar con éxito una oportunidad</description>
    <errorConditionFormula>AND(    RecordType.Name &lt;&gt; &apos;Retención&apos;, 
			    	ISCHANGED(StageName), 
        ISPICKVAL( StageName , &apos;Cerrada - Éxito&apos;), 
     OR(
									AND(
													CodeSAPResponse__c != &apos;(S, S)&apos;, CodeSAPResponse__c != &apos;(S, E, S)&apos;), IdExternoSAP__c = null, ISBLANK(IdExternoSAP__c) )
)</errorConditionFormula>
    <errorMessage>No se puede cerrar una oportunidad como éxito sin haber realizado el envío a SAP correctamente</errorMessage>
</ValidationRule>