force-app/main/default/objects/Opportunity/validationRules/CerradaExitoFechasIngresoRellenas.validationRule-meta.xml
<ValidationRule>
    <fullName>CerradaExitoFechasIngresoRellenas</fullName>
    <active>true</active>
    <description>Cuando vamos a convertir una oportunidad a &quot;Cerrada-Ganada&quot; debemos tener rellenas la fecha de ingreso y la fecha de ingreso planificado</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Envío SAP&apos;),
OR ( ISBLANK(FechaIngreso__c ) ,
ISBLANK(ResidenciaIngreso__c)
)
)</errorConditionFormula>
    <errorMessage>Es necesario rellenar la fecha de ingreso y la residencia  de ingreso para poder enviar la oportunidad a SAP</errorMessage>
</ValidationRule>