force-app/main/default/objects/Opportunity/validationRules/CerradaPerdidaObligatorioMotivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CerradaPerdidaObligatorioMotivo</fullName>
    <active>true</active>
    <description>Es obligatorio completar el motivo de perdida</description>
    <errorConditionFormula>AND(
 ISPICKVAL( StageName , &apos;Cerrada - Perdida&apos;),
  ISPICKVAL( MotivoPerdida__c , &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Es obligatorio rellenar el motivo de pérdida</errorMessage>
</ValidationRule>