force-app/main/default/objects/Opportunity/validationRules/ListaEsperaPrescriptorObligatorioRellena.validationRule-meta.xml
<ValidationRule>
    <fullName>ListaEsperaPrescriptorObligatorioRellena</fullName>
    <active>true</active>
    <description>Si entra en lista de espera por Prescriptor es obligatorio rellenar el Prescriptor</description>
    <errorConditionFormula>AND (
 ISPICKVAL( CriterioPreferenciaListaEspera__c , &apos;Prescriptor&apos;),
 ISBLANK( Prescriptor__c )  
)</errorConditionFormula>
    <errorMessage>Al indicar el criterio de lista de espera Prescriptor, es obligatorio cumplimentar el campo Prescriptor.</errorMessage>
</ValidationRule>