force-app/main/default/objects/Opportunity/validationRules/ModificarCamposSAP.validationRule-meta.xml
<ValidationRule>
    <fullName>ModificarCamposSAP</fullName>
    <active>false</active>
    <description>No se pueden modificar los campos de SAP si no tienes perfil administrador o eres un usuario en específico</description>
    <errorConditionFormula>AND( 
OR( ISCHANGED( CodeSAPResponse__c ),
    ISCHANGED(  IdExternoSAP__c )), 
  NOT($Permission.ModificarCamposSAP) )</errorConditionFormula>
    <errorMessage>Los campos de SAP solo pueden ser modificados por ciertos usuarios.</errorMessage>
</ValidationRule>