force-app/main/default/objects/Opportunity/validationRules/MotivoYDetalleIngresoObligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>MotivoYDetalleIngresoObligatorio</fullName>
    <active>true</active>
    <description>Los campos Motivo de Ingreso y Detalle Motivo de Ingreso deben rellenarse si la oportunidad es Privada</description>
    <errorConditionFormula>AND(
				ISNEW(),
				 $Profile.Name&lt;&gt;&apos;Administrador del sistema&apos;,
				ISPICKVAL(DetalleMotivoIngreso__c,&apos;&apos;),
				ISPICKVAL(TipoPlaza__c,&apos;P&apos;) 
				)</errorConditionFormula>
    <errorDisplayField>MotivoIngreso__c</errorDisplayField>
    <errorMessage>Es obligatorio rellenar  los campos &quot;Motivo de Ingreso&quot; y &quot;Detalle Motivo de Ingreso&quot;</errorMessage>
</ValidationRule>