force-app/main/default/objects/Opportunity/validationRules/OportTrasladoObligatorioCriterioTralado.validationRule-meta.xml
<ValidationRule>
    <fullName>OportTrasladoObligatorioCriterioTralado</fullName>
    <active>false</active>
    <description>Si la oportunidad tiene tipo de resgistro traslado, es obligatorio que el criterio de lista de espera sea Traslado</description>
    <errorConditionFormula>AND(
 ISNEW(),
 RecordType.DeveloperName =&apos;Traslado&apos;,
 NOT(ISPICKVAL( CriterioPreferenciaListaEspera__c , &apos;Traslado&apos;))
)</errorConditionFormula>
    <errorMessage>Completa el campo de Criterio de lista de espera con el valor &quot;Traslado&quot;</errorMessage>
</ValidationRule>