force-app/main/default/objects/Opportunity/validationRules/OportunidadDuplicadaEtapaListaDeEspera.validationRule-meta.xml
<ValidationRule>
    <fullName>OportunidadDuplicadaEtapaListaDeEspera</fullName>
    <active>true</active>
    <description>Regla de validación para evitar que se duplique una oportunidad en etapa &quot;Lista de Espera - Derivación - Traslado&quot;</description>
    <errorConditionFormula>AND(ISCLONE(),
				ISPICKVAL(StageName,&apos;Lista de espera - Derivación - Traslado&apos;),
				$User.Alias!=&apos;uinte&apos;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>No puede duplicarse una oportunidad en etapa &quot;Lista de Espera - Derivación - Traslado&quot;</errorMessage>
</ValidationRule>