force-app/main/default/objects/Opportunity/validationRules/PlazaDomingoOcupada.validationRule-meta.xml
<ValidationRule>
    <fullName>PlazaDomingoOcupada</fullName>
    <active>true</active>
    <description>si la plaza que se elige está ocupada debe salir un mensaje</description>
    <errorConditionFormula>AND(
$Profile.Id &lt;&gt; $Label.IdPerfilAdministradorSistema,
   ISCHANGED(PlazaDomingo__c),
   PlazaDomingo__r.PlazaOcupada__c 
)</errorConditionFormula>
    <errorMessage>La plaza del Domingo que intenta seleccionar está ocupada</errorMessage>
</ValidationRule>