force-app/main/default/objects/Opportunity/validationRules/PlazaJuevesOcupada.validationRule-meta.xml
<ValidationRule>
    <fullName>PlazaJuevesOcupada</fullName>
    <active>true</active>
    <description>si la plaza que se elige está ocupada debe salir un mensaje</description>
    <errorConditionFormula>AND(
   $Profile.Id &lt;&gt; $Label.IdPerfilAdministradorSistema,
   ISCHANGED(PlazaJueves__c),
   PlazaJueves__r.PlazaOcupada__c
)</errorConditionFormula>
    <errorMessage>La plaza del Jueves que intenta seleccionar está ocupada</errorMessage>
</ValidationRule>