force-app/main/default/objects/Opportunity/validationRules/PlazaLunesOcupada.validationRule-meta.xml
<ValidationRule>
    <fullName>PlazaLunesOcupada</fullName>
    <active>true</active>
    <description>si la plaza que se elige está ocupada debe salir un mensaje</description>
    <errorConditionFormula>AND(
  $Profile.Id &lt;&gt; $Label.IdPerfilAdministradorSistema,
  ISCHANGED(PlazaLunes__c),
  PlazaLunes__r.PlazaOcupada__c
)</errorConditionFormula>
    <errorMessage>La plaza del Lunes que intenta seleccionar está ocupada</errorMessage>
</ValidationRule>